insert account handler changed

--- a/force-app/main/default/classes/AfterInsertAccountHandler.cls
+++ b/force-app/main/default/classes/AfterInsertAccountHandler.cls
@@ -2,7 +2,7 @@ public class AfterInsertAccountHandler implements TriggerHandlerInterface {
     public void run(List<SObject> newList, Map<Id, SObject> oldMap) {
         List<Account> accounts = (List<Account>) newList;
         for (Account acc : accounts) {
-            acc.Name = acc.Name + ' - Modified';
+            acc.Name = acc.Name + ' - Modified Again';
         }
     }
 }
